z-index fixes

--- a/ntnui/static/css/booking_modal.css
+++ b/ntnui/static/css/booking_modal.css
@@ -12,6 +12,11 @@
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
+/* Booking-modal */
+#booking-modal {
+    z-index: 20000;
+}
+
 /* Modal Content/Box */
 .modal-content {
     background-color: #fefefe;
